--- a/libs/swe-demo/feature/src/lib/navbar-container/navbar-container.html
+++ b/libs/swe-demo/feature/src/lib/navbar-container/navbar-container.html
@@ -1,5 +1,5 @@
 <lib-swe-demo-ui-navbar
-  [items]="items()"
+  [items]="items"
   [showUser]="true"
   (navigate)="onNavigate($event)"
   (logout)="onLogout()"
